2003-10-30  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/refman.itely, input/regression/tie-accidental.ly,
	input/regression/tie-chord.ly: Fix spell for tying.

	* input/test/ly2dvi-testpage.ly: removed (renamed, see below).

	* input/test/lilypond-testpage.ly, Documentation/user/invoking.itexi:
	new file (renamed, see above).

2003-10-29  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond-book.py (output_dict): Add definition of
	\lilypondbook also for LaTeX output. Solves several bug reports.

2003-10-29  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/follow-thread.ly, input/test/polymetric.ly: Fix typos.

2003-10-24  Heikki Junes  <hjunes@cc.hut.fi>

	* input/test/transposition.ly: Fix key signatures, given in comments.

2003-10-23  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/midi.scm (instrument-names-alist),
	Documentation/user/appendices.itely: Correct spelling of shakuhachi

2003-10-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* input/test/temporary-stave.ly (texidoc): New example based on an
	email question from Ralph Little.

2003-10-11  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/note-performer.cc (try_music): accept busy-playing-event.

	* lily/swallow-perf.cc (try_music): return false for
	busy-playing-event and melisma-playing-event.

2003-10-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/etf2ly.py: Patch by Arvid Grotting for minor keys and <<
	>> in \score.

2003-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py (sub_chords): Bugfix: convert to -[, so
	that articulation_substitute will not move beam start again.
	(articulation_substitute): Bugfix: remove stray space so that new
	old chords ending '>>' does not get broken up.
	(sub_chord): Use TAB for indentation (not spaces).
	
	* elisp/lilypond-font-lock.el (LilyPond-mode-set-syntax-table):
	Bugfix for startup: Use ?^ instead of ?\^.

2003-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lyric-combine-music-iterator.cc