@@ -179,7 +179,7 @@
    "\\lilypondspecial\n"
    "\\lilypondpostscript\n"))
 
-;; Note: this string must match the string in ly2dvi.py!!!
+;; Note: this string must match the string in lilypond.py!!!
 (define (header creator generate) 
   (string-append
    "% Generated automatically by: " creator generate "\n"))
