@@ -174,7 +174,7 @@
   {\gdef\lilypondpaperinterscorelinefill{0}}
   {\gdef\lilypondpaperinterscorelinefill{1}}
 
-%% Allow overriding of interscoreline, eg for ly2dvi --preview
+%% Allow overriding of interscoreline, eg for lilypond --preview
 \lilypondifundefined{interscoreline}
 {\gdef\interscoreline{
   \vskip \lilypondpaperinterscoreline \lilypondpaperunit
