@@ -159,7 +159,7 @@
   \fi
 }
 
-% Moved header and footer definitions here from the ly2dvi script.
+% Moved header and footer definitions here from the lilypond script.
 % Separate page styles for first, last and ordinary (plain) pages.
 
 \makeatletter
